--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^9.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.51.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
