--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@types/react-google-recaptcha": "^2.1.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.31.2",
     "react-redux": "^8.0.1",
     "react-router": "^5.2.1",
