--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.9.8",
     "react-hook-form": "^7.31.2",
     "react-redux": "^8.0.1",
     "react-router": "^5.2.1",
